Updated pricing button alignment issues

--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -18,4 +18,7 @@
   .list-price {
     width: 320px;
   }
+  .mt-n2{
+    margin-top: -6rem;
+  }
 }
